Replace getFirst() with get(0) for Java 11, 17